--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,16 +25,16 @@ services:
 
   
   db:
-    container_name: db_duyuru
+    container_name: db_example
     image: postgres:12
     restart: always
     ports:
-      - "5432:5432"
+      - "5434:5432"
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
-    command: -p 5432
+    command: -p 5434
     volumes:
       - pgdata:/var/lib/postgresql/data
 
